2005-01-21  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c (configure_pixmaps_idle): Blank pixbuf when the
	image is corrupt or loader fails.

2005-01-03  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c (load_image): Preimage API update, uri -> file.

2004-12-16  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c (create_statusbar): Fix indentations in source.
	(configure_pixmaps_idle): Fix thinko in handling of idle draw.

2004-12-13  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c: Replace "New Game" menu item with "Restart Puzzle"
	(expose_space): Draw when scaling, but not while changing levels.
	(gui_draw_space): New. Prepares GCs and the pixmap buffer, draws
	a border. Allows us to remove get_bg_color() and the old frame.
	(gui_draw_pixmap),(create_space): Support the new puzzle border.
	(configure_pixmaps),(confiugre_pixmaps_idle),(draw_all):
	Add an idle to draw_all() rather than call it right after we've
	finished rendering the SVG.
	(main)(create_statusbar): Switch from GnomeAppbar to GtkStatusbar.
	(prepare_map)(update_menu_state)(about_cb): Minor cleanup.

2004-11-15  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c: Fix Climb 24 Pro, it only had 23 pieces.
	(prepare_map): Free the new strdup.
	(level_cb): Start new game from radio actions only on new levels.

2004-11-14  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c: New puzzles, GtkAction menus, misc changes.
	(*_cb): Support GtkAction
	(next_level_cb, prev_level_cb, restart_level_cb): New, navigation.
	(level_cb): Replace callback part of new_game_cb().
	(main): Load last played game from gconf, support new menubar.
	(new_game): converted from new_game_cb.
	(prepare_map): Vastly simplified with changes to level format.
	(create_menubar): New menubar to support GtkAction.
	(update_menu_state): New, set menu sensitities on puzzle change.
	(about_cb): Switch to GtkAboutDialog.
	(hint_cb): New, show minimum number of moves if known.
	(add_puzzle_menu): New, create radio actions for each puzzle.