@@ -487,42 +487,29 @@ const levelinfo level[]= {
 
      /* puzzle name */
   { N_("Sunshine"), 2,
-    29, 35, 0,
-    "           #######           " \
-    "           # ... #           " \
-    "           #.. ..#           " \
-    "           #.   .#           " \
-    "           #.. ..#           " \
-    "           # ... #           " \
-    "############-----############" \
-    "#\x90\x90\x91\x92\x92\x80\x80\x80\x80\x80 \xb0\xb0\xb1\xb2\xb2 \x81\x81\x81\x81\x81\x98\x98\x99\x9a\x9a#" \
-    "#\x90\x90\x91\x92\x92\x80\x80\x80\x80\x80 \xb0\xb0\xb1\xb2\xb2 \x81\x81\x81\x81\x81\x98\x98\x99\x9a\x9a#" \
-    "#\x93\x93 \x94\x94\x80\x80\x80\x80\x80 \xb3\xb3 \xb4\xb4 \x81\x81\x81\x81\x81\x9b\x9b \x9c\x9c#" \
-    "#\x95\x95\x96\x97\x97\x80\x80\x80\x80\x80 \xb5\xb5\xb6\xb7\xb7 \x81\x81\x81\x81\x81\x9d\x9d\x9e\x9f\x9f#" \
-    "#\x95\x95\x96\x97\x97\x80\x80\x80\x80\x80 \xb5\xb5\xb6\xb7\xb7 \x81\x81\x81\x81\x81\x9d\x9d\x9e\x9f\x9f#" \
-    "#\x84\x84\x84\x84\x84#################\x83\x83\x83\x83\x83#" \
-    "#\x84\x84\x84\x84\x84#ddFeeA***BffOZZ#\x83\x83\x83\x83\x83#" \
-    "#\x84\x84\x84\x84\x84#ddFee** **ffOZZ#\x83\x83\x83\x83\x83#" \
-    "#\x84\x84\x84\x84\x84#MMKQQ*   *PPS\xde\xde#\x83\x83\x83\x83\x83#" \
-    "#\x84\x84\x84\x84\x84#VVLXX** **bbRcc#\x83\x83\x83\x83\x83#" \
-    "#     #VVLXXD***EbbRcc#     #" \
-    "#\xc0\xc0\xc1\xc2\xc2#\x89\x89\x89\x89\x89TTJWW\x8a\x8a\x8a\x8a\x8a#\xc8\xc8\xc9\xca\xca#" \
-    "#\xc0\xc0\xc1\xc2\xc2#\x89\x89\x89\x89\x89TTJWW\x8a\x8a\x8a\x8a\x8a#\xc8\xc8\xc9\xca\xca#" \
-    "#\xc3\xc3 \xc4\xc4#\x89\x89\x89\x89\x89GG HH\x8a\x8a\x8a\x8a\x8a#\xcb\xcb \xcc\xcc#" \
-    "#\xc5\xc5\xc6\xc7\xc7#\x89\x89\x89\x89\x89YYIgg\x8a\x8a\x8a\x8a\x8a#\xcd\xcd\xce\xcf\xcf#" \
-    "#\xc5\xc5\xc6\xc7\xc7#\x89\x89\x89\x89\x89YYIgg\x8a\x8a\x8a\x8a\x8a#\xcd\xcd\xce\xcf\xcf#" \
-    "#     #hh\xd0iilltmmpp\xd1qq#     #" \
-    "#\x85\x85\x85\x85\x85#hh\xd2iill mmpp\xddqq#\x86\x86\x86\x86\x86#" \
-    "#\x85\x85\x85\x85\x85#2y\xd3\xd4\xd5v s w\xd8\xd9x\xdaz#\x86\x86\x86\x86\x86#" \
-    "#\x85\x85\x85\x85\x85#jj\xd6kkaa nnoo\xdbrr#\x86\x86\x86\x86\x86#" \
-    "#\x85\x85\x85\x85\x85#jj\xd7kkaaunnoo\xdcrr#\x86\x86\x86\x86\x86#" \
-    "#\x85\x85\x85\x85\x85######-----######\x86\x86\x86\x86\x86#" \
-    "#\xa0\xa0\xa1\xa2\xa2\x88\x88\x88\x88\x88 \xb8\xb8\xb9\xba\xba \x87\x87\x87\x87\x87\xa8\xa8\xa9\xaa\xaa#" \
-    "#\xa0\xa0\xa1\xa2\xa2\x88\x88\x88\x88\x88 \xb8\xb8\xb9\xba\xba \x87\x87\x87\x87\x87\xa8\xa8\xa9\xaa\xaa#" \
-    "#\xa3\xa3 \xa4\xa4\x88\x88\x88\x88\x88 \xbb\xbb \xbc\xbc \x87\x87\x87\x87\x87\xab\xab \xac\xac#" \
-    "#\xa5\xa5\xa6\xa7\xa7\x88\x88\x88\x88\x88 \xbd\xbd\xbe\xbf\xbf \x87\x87\x87\x87\x87\xad\xad\xae\xaf\xaf#" \
-    "#\xa5\xa5\xa6\xa7\xa7\x88\x88\x88\x88\x88 \xbd\xbd\xbe\xbf\xbf \x87\x87\x87\x87\x87\xad\xad\xae\xaf\xaf#" \
-    "#############################" },
+    17, 22, 345,
+    "       ...       " \
+    "      .. ..      " \
+    "      .   .      " \
+    "      .. ..      " \
+    "       ...       " \
+    "######-----######" \
+    "#hh0iilltmmpp;qq#" \
+    "#hh,iill mmpp:qq#" \
+    "#2y{45v s w89x/z#" \
+    "#jj6kkaa nnoo<rr#" \
+    "#jj7kkaaunnoo>rr#" \
+    "#33333TTJWW11111#" \
+    "#33333TTJWW11111#" \
+    "#33333GG HH11111#" \
+    "#33333YYIgg11111#" \
+    "#33333YYIgg11111#" \
+    "#ddFeeA***BffOZZ#" \
+    "#ddFee** **ffOZZ#" \
+    "#MMKQQ*   *PPS^^#" \
+    "#VVLXX** **bbRcc#" \
+    "#VVLXXD***EbbRcc#" \
+    "#################" },
 
      /* puzzle name */
   { N_("Block 10"), 3,
